Updated portfolio readme file with linkedIn picture credits and changed instagram link image to linkedIn image.

--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -79,7 +79,7 @@
             </li>
             <li class="icon">
               <img
-                src="./images/instagram.png"
+                src="./images/linkein.png"
                 alt="instagram icon"
                 class="icon-img"
               />
