Fixed typo in image source for linked in image.

--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -79,8 +79,8 @@
             </li>
             <li class="icon">
               <img
-                src="./images/linkein.png"
-                alt="instagram icon"
+                src="./images/linkedin.png"
+                alt="linkedin icon"
                 class="icon-img"
               />
             </li>
