--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -12,19 +12,34 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Kaushan+Script&family=Roboto+Slab:wght@600&family=Ubuntu&display=swap"
       rel="stylesheet"
     />
+    <script src="./script.js" defer></script>
   </head>
   <body>
     <div id="container">
       <header>
-        <div class="logo">
-          <h1 class="name">Stephen Lyssy</h1>
-          <h3 class="position">Project Manager/Web Developer</h3>
-        </div>
-        <nav>
-          <a href="#">Resume</a>
-          <a href="#">About Me</a>
-          <a href="#">My Blog</a>
-          <a class="has-border" href="#">Contact Me</a>
+        <nav class="navbar">
+          <div class="logo">
+            <h1 class="name">Stephen Lyssy</h1>
+            <h3 class="position">Project Manager/Web Developer</h3>
+          </div>
+          <a href="" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </a>
+          <div class="navbar-links">
+            <ul>
+              <li>
+                <a
+                  href="https://slyssy.github.io/ACA_web101_Stephen_Lyssy/My_Portfolio/index.html"
+                  >Home</a
+                >
+              </li>
+              <li><a href="./resume.html">Resume</a></li>
+              <li><a href="./projects.html">Projects</a></li>
+              <li><a href="./contact.html">Contact</a></li>
+            </ul>
+          </div>
         </nav>
       </header>
       <main>
@@ -43,53 +58,61 @@
             <h4 class="myWork-link">My Work</h4>
             <h4 class="mySkill-link">My Skills</h4>
           </div>
-          <p class="main-paragraph">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
-            reiciendis expedita, iste perferendis adipisci, ipsam voluptatum at
-            facere maxime nulla officia est culpa accusantium beatae neque
-            dolore doloribus sunt delectus.
-          </p>
+          <div class="main-paragraph">
+            <p class="main-paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+              reiciendis expedita, iste perferendis adipisci, ipsam voluptatum
+              at facere maxime nulla officia est culpa accusantium beatae neque
+              dolore doloribus sunt delectus.
+            </p>
+          </div>
         </div>
       </main>
       <footer>
-        <div class="phone">
-          <p>Call</p>
-          <p>T: (512) 492-2659</p>
+        <div class="footer-column-top">
+          <div class="phone">
+            <p>Call</p>
+            <p>T: (512) 492-2659</p>
+          </div>
+          <div class="email">
+            <p>E-Mail</p>
+            <p>stephen.lyssy@gmail.com</p>
+          </div>
         </div>
-        <div class="email">
-          <p>E-Mail</p>
-          <p>stephen.lyssy@gmail.com</p>
+        <div class="footer-column-middle">
+          <div class="follow">
+            <p>Follow Me</p>
+            <ul class="icons">
+              <li class="icon">
+                <img
+                  src="./images/facebook.png"
+                  alt="facebook icon"
+                  class="icon-img"
+                />
+              </li>
+              <li class="icon">
+                <img
+                  src="./images/twitter.png"
+                  alt="twitter icon"
+                  class="icon-img"
+                />
+              </li>
+              <li class="icon">
+                <img
+                  src="./images/linkedin.png"
+                  alt="linkedin icon"
+                  class="icon-img"
+                />
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="follow">
-          <p>Follow Me</p>
-          <ul class="icons">
-            <li class="icon">
-              <img
-                src="./images/facebook.png"
-                alt="facebook icon"
-                class="icon-img"
-              />
-            </li>
-            <li class="icon">
-              <img
-                src="./images/twitter.png"
-                alt="twitter icon"
-                class="icon-img"
-              />
-            </li>
-            <li class="icon">
-              <img
-                src="./images/linkedin.png"
-                alt="linkedin icon"
-                class="icon-img"
-              />
-            </li>
-          </ul>
-        </div>
-        <div class="Postal">
-          <p>Postal</p>
-          <p>1523 Founders Park</p>
-          <p>New Braunfels, TX 78132</p>
+        <div class="footer-column-bottom">
+          <div class="Postal">
+            <p>Postal</p>
+            <p>1523 Founders Park</p>
+            <p>New Braunfels, TX 78132</p>
+          </div>
         </div>
       </footer>
     </div>
