Added a skill.html file and updated the link address and styling for the main section links.

--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -54,9 +54,9 @@
           <h1 class="h1-main">Hello,</h1>
           <h2 class="h2-main">a bit about me:</h2>
           <div class="main-links">
-            <h4 class="resume-link">My Resume</h4>
-            <h4 class="myWork-link">My Work</h4>
-            <h4 class="mySkill-link">My Skills</h4>
+            <h4 class="resume-link"><a href="./resume.html">My Resume</a></h4>
+            <h4 class="myWork-link"><a href="./projects.html">My Work</a></h4>
+            <h4 class="mySkill-link"><a href="./skills.html">My Skills</a></h4>
           </div>
           <div class="main-paragraph">
             <p class="main-paragraph">
