Fixed typos in the footer.

--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -71,17 +71,17 @@
       <footer>
         <div class="footer-column-top">
           <div class="phone">
-            <p>Call</p>
+            <p>Call:</p>
             <p>T: (512) 492-2659</p>
           </div>
           <div class="email">
-            <p>E-Mail</p>
+            <p>E-Mail:</p>
             <p>stephen.lyssy@gmail.com</p>
           </div>
         </div>
         <div class="footer-column-middle">
           <div class="follow">
-            <p>Follow Me</p>
+            <p>Follow Me:</p>
             <ul class="icons">
               <li class="icon">
                 <img
