Added link addresses to footer links and changed some background colors.

--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -37,7 +37,7 @@
               </li>
               <li><a href="./resume.html">Resume</a></li>
               <li><a href="./projects.html">Projects</a></li>
-              <li><a href="./contact.html">Contact</a></li>
+              <li><a href="./contact.html">Contact Me</a></li>
             </ul>
           </div>
         </nav>
@@ -84,32 +84,50 @@
             <p>Follow Me:</p>
             <ul class="icons">
               <li class="icon">
-                <img
-                  src="./images/facebook.png"
-                  alt="facebook icon"
-                  class="icon-img"
-                />
+                <a
+                  href="https://www.linkedin.com/in/stephenlyssy/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img
+                    src="./images/linkedin.png"
+                    alt="linkedin icon"
+                    class="icon-img"
+                  />
+                </a>
               </li>
               <li class="icon">
-                <img
-                  src="./images/twitter.png"
-                  alt="twitter icon"
-                  class="icon-img"
-                />
+                <a
+                  href="https://www.facebook.com/stephen.lyssy.9"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img
+                    src="./images/facebook.png"
+                    alt="facebook icon"
+                    class="icon-img"
+                  />
+                </a>
               </li>
               <li class="icon">
-                <img
-                  src="./images/linkedin.png"
-                  alt="linkedin icon"
-                  class="icon-img"
-                />
+                <a
+                  href="https://twitter.com/StephenLyssy"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img
+                    src="./images/twitter.png"
+                    alt="twitter icon"
+                    class="icon-img"
+                  />
+                </a>
               </li>
             </ul>
           </div>
         </div>
         <div class="footer-column-bottom">
           <div class="Postal">
-            <p>Postal</p>
+            <p>Postal:</p>
             <p>1523 Founders Park</p>
             <p>New Braunfels, TX 78132</p>
           </div>
