Added a little blurb to the about me section of the landing page.

--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -60,10 +60,19 @@
           </div>
           <div class="main-paragraph">
             <p class="main-paragraph">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
-              reiciendis expedita, iste perferendis adipisci, ipsam voluptatum
-              at facere maxime nulla officia est culpa accusantium beatae neque
-              dolore doloribus sunt delectus.
+              I am currently an Enterprise Project Manager for ADT Commercial.
+              Basically, I oversee the installation of custom security and life
+              safety systems for commercial clients. This is just my day job. In
+              my free time, I can either be found out on a hike with my two
+              dogs, Percy and Winston, or you can find me sitting in front of my
+              computer tinkering with code. <br /><br />It's my dream to one day
+              turn my coding hobby into successful career. They say,
+              <em
+                >"Do what you love, and you'll never work a day in your life." </em
+              >I love working on code. I love how it forces you to think through
+              problems and approach things from all possible angles. There is a
+              certain Zen to it, and I can easily spend hours working on
+              something to make it just right.
             </p>
           </div>
         </div>
