Added resume to resume.html

--- a/My_Portfolio/resume.html
+++ b/My_Portfolio/resume.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stephen's Resume</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="resume.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -42,11 +42,17 @@
           </div>
         </nav>
       </header>
-      <img
-        src="./images/underConstruction.png"
-        alt="Under Construction Image"
-        class="underConstruction"
-      />
+      <iframe
+        src="./images/StephenLyssySoftwareDevelopmentResume2021.pdf#zoom=fitH"
+        style="
+          position: absolute;
+          right: 0;
+          top: 0;
+          bottom: 0;
+          width: 100%;
+          height: 100vh;
+        "
+      ></iframe>
     </div>
   </body>
 </html>
