Updated my index.html page to include a background image, and also updated other style elements.

--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lyssy Portfolio</title>
+    <title>Background</title>
+    <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -45,14 +46,14 @@
       <main>
         <div class="page-left">
           <img
-            src="./images/myProfilePic.jpeg"
+            src="./images/myProfilePic2.jpeg"
             alt="Head shot of Me"
             id="profile-pic"
           />
         </div>
         <div class="page-right">
-          <h1 class="h1-main">Hello,</h1>
-          <h2 class="h2-main">a bit about me:</h2>
+          <h2 class="h2-main">Dream, Think</h2>
+          <h1 class="h1-main">Create!</h1>
           <div class="main-links">
             <h4 class="resume-link"><a href="./resume.html">My Resume</a></h4>
             <h4 class="myWork-link"><a href="./projects.html">My Work</a></h4>
