fixed typo in page title

--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -52,7 +52,7 @@
           />
         </div>
         <div class="page-right">
-          <h2 class="h2-main">Dream, Think</h2>
+          <h2 class="h2-main">Dream, Think,</h2>
           <h1 class="h1-main">Create!</h1>
           <div class="main-links">
             <h4 class="resume-link"><a href="./resume.html">My Resume</a></h4>
