--- a/My_Portfolio/resume.html
+++ b/My_Portfolio/resume.html
@@ -12,6 +12,19 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Kaushan+Script&family=Roboto+Slab:wght@600&family=Ubuntu&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,500;1,100;1,300&family=Alegreya+Sans:wght@100;300&family=Inter:wght@400;500;700&family=Kaushan+Script&family=Roboto+Slab:wght@500;600&family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,500;1,100;1,300&family=Alegreya+Sans:wght@100;300;400;500;700&family=Inter:wght@400;500;700&family=Kaushan+Script&family=Roboto+Slab:wght@500;600&family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
     <script src="./script.js" defer></script>
   </head>
   <body>
@@ -42,17 +55,238 @@
           </div>
         </nav>
       </header>
-      <iframe
-        src="./images/StephenLyssySoftwareDevelopmentResume2021.pdf#zoom=fitH"
-        style="
-          position: absolute;
-          right: 0;
-          top: 0;
-          bottom: 0;
-          width: 100%;
-          height: 100vh;
-        "
-      ></iframe>
+      <div class="resume">
+        <div class="tag-line upperCase" style="color: #e83656ff;">
+          Dynamic Leader Seeking Career Change Into Software
+          Development/Engineering
+          <hr />
+        </div>
+        <p class="contact-info">
+          1523 Founders Park | New Braunfels, TX 78132 | (512) 492-2659 |
+          stephen.lyssy@gmail.com |
+          <a href="https://www.linkedin.com/in/stephenlyssy"
+            >https://www.linkedin.com/in/stephenlyssy</a
+          >
+        </p>
+        <div class="profile-qualifications">
+          <h3 class="section-headers">Profile of Qualifications</h3>
+          <hr />
+          <p class="qualifications upperCase">
+            Project Management | JavaScript | Python |HTML | CSS | D3.JS |
+            PostgresSQL | SQL | MONGODB |Tableau| Flask | Pandas | Strategic
+            Analysis / Plans | Vendor Relations | Key Contract Negotiations |
+            Start-Up / Turnaround Operations| Multi-Process Improvement| Product
+            / Systems Development | Team Building / Training | Trends Tracking |
+            Business Development | Sales / Marketing | Risk Mitigation |
+            Regulatory Compliance | Work Prioritization | Cost Reductions|
+            Multi-Site Operations Management
+          </p>
+          <ul>
+            <li>
+              Ambitious self-starter who offers proven experience in large-scale
+              business operations optimization in alignment with a company’s
+              vision, value, and goals, and further leads teams by example and
+              with integrity to deliver service excellence.
+            </li>
+            <li>
+              Top performer who contributes sharp analytical abilities and
+              superior attention-to-detail while demonstrating expertise in new
+              business development, start-up operations, sales / marketing, and
+              strategic oversight of high-volume projects.
+            </li>
+            <li>
+              Excellent communicator who seamlessly liaises among C-level
+              executives, contractors, vendors, technicians, business
+              associates, clients, and the community alike while promoting the
+              utmost professionalism in attaining aggressive goals.
+            </li>
+          </ul>
+        </div>
+        <div class="continued-education">
+          <h3 class="section-headers">Continued Education</h3>
+
+          <hr />
+          <p>
+            Successfully completed the Data Analysis and Visualization Boot Camp
+            gaining new skills in Python, JavaScript, SQL Databases, HTML, CSS,
+            Tableau, D3.JS and much more. See link to GitHub Repository.
+            https://github.com/Slyssy
+          </p>
+          <ul>
+            <li>
+              Graduated at the top of my class and took a mentor role for
+              several other students in my class. I performed so well that my
+              instructor, Edward Krueger, and his teaching assistant, Douglas
+              Franklin asked me to write an article with them for Towards Data
+              Science, a Medium publication. To view this article, “Classes in
+              Functional Programming”, click the following link.
+              https://towardsdatascience.com/classes-in-functional-programming-ee48a50b6235.
+            </li>
+            <li>
+              Completed a project that used Python and Plotly to perform API
+              requests from Cornell University to track and visualize the
+              migration patterns for birds across the United States.
+            </li>
+            <li>
+              Developed a job costing application using Python, JavaScript, D3,
+              SQL, HTML and CSS that would allow users to enter projects and
+              track their expenses across the lifecycle of the project. Created
+              custom visualizations that made it easy to see and understand the
+              project’s performance.
+            </li>
+            <li>
+              Currently enrolled in Udemy’s “Complete JavaScript Course 2021:
+              From Zero to Expert” and have already enrolled for Udemy’s “React
+              – The Complete Guide (including Hooks, React Router, Redux)”.
+            </li>
+          </ul>
+        </div>
+        <div class="career-highlights">
+          <h3 class="section-headers">Career Highlights</h3>
+          <hr />
+          <ul>
+            <li>
+              Maximize bottom-line performance by developing state-of-the-art
+              software to increase productivity and track project costs (i.e.
+              everything from salary expenses to sales tax expenses to material
+              costs) on a cloud computing platform.
+            </li>
+            <li>
+              Employed the knowledge and skills I cultivated while developing
+              the project management software indicated above to start a project
+              management software business
+            </li>
+            <li>
+              Achieved recognition as Tyco Integrated Security’s #1
+              subcontractor in the State of Florida handling 60% of all
+              commercial installations, as well as attaining status as the
+              largest installation provider for the company’s nationwide
+              accounts.
+            </li>
+            <li>
+              Spearheaded project growth from 5 concurrent initiatives to 120+
+              active projects while contributing sharp analytical abilities to
+              forecast projects’ completion, determine obstacles, and implement
+              solutions to mitigate any risks.
+            </li>
+          </ul>
+        </div>
+        <div class="proffessional-synopsis">
+          <h3 class="section-headers">Professional Synopsis</h3>
+          <hr />
+          <p class="upperCase company-name">Total Security Solutions</p>
+          <hr class="divider-light" />
+          <h5 class="job-position">Project Manager / Estimator</h5>
+          <ul>
+            <li>
+              Employed extensive industry experience and business insight to
+              develop a new business division and guide the expansion into a new
+              market sector for an existing residential and small business
+              security company
+            </li>
+            <li>
+              Optimize use of resources to achieve objectives by managing all
+              scheduling and workflow prioritization, including proactively
+              adjusting schedules per daily multi-project requirements and
+              deadlines to successfully complete the job.
+            </li>
+            <li>
+              Utilized self-developed project management software to manage
+              project documentation including contracts, change orders, permit
+              documentation and project close out documents as well as track
+              expenses and job completion progress to mitigate risks and deliver
+              profitable projects.
+            </li>
+          </ul>
+          <p class="upperCase company-name">ACS Fire & Security</p>
+          <hr class="divider-light" />
+          <h5 class="job-position">Vice President of Operations</h5>
+          <ul>
+            <li>
+              Utilize broad scope of industry knowledge and dynamic business
+              acumen toward directing forward-thinking operations, including
+              recruiting, training, mentoring, and managing a top-performing
+              team of 20+ technicians, as well as leading 60+ contractors in
+              actively managing 140+ projects simultaneously with a backlog in
+              the seven-figure range.
+            </li>
+            <li>
+              Optimize use of resources to achieve objectives by managing all
+              scheduling and workflow prioritization, including proactively
+              adjusting schedules per daily multi-project requirements and
+              deadlines to successfully complete the job.
+            </li>
+            <li>
+              Built and maintained strategic business relationships in an effort
+              to control costs, mitigate risks, maximize projected net margins
+              and contribute to over a 100% growth in annual revenue in just 5
+              years.
+            </li>
+          </ul>
+          <p class="upperCase company-name">Carter Brothers</p>
+          <hr class="divider-light" />
+          <h5 class="job-position">Senior Project Manager</h5>
+          <ul>
+            <li>
+              Capitalized on the opportunity to become the youngest project
+              manager in the organization’s history, including directing all
+              facets of Florida project implementation to expedite project
+              delivery and mitigate operational risk, as well as quickly
+              developing professional skills to attain status as one of the
+              organization’s most successful project managers.
+            </li>
+            <li>
+              Coordinated efforts among large-scale subcontractors to deliver a
+              finished project in a timely manager for a fixed cost.
+            </li>
+          </ul>
+          <p class="upperCase company-name">Stanberry & Associates</p>
+          <hr class="divider-light" />
+          <h5 class="job-position">Marketing Director</h5>
+          <ul>
+            <li>
+              Drove business growth by building an independent marketing program
+              for this largest privately owned real estate brokerage firm in
+              Texas, including developing mutually beneficial relationships with
+              high-profile vendors to create results-generating marketing events
+              and public relations opportunities for the firm’s agents to
+              further boost profits.
+            </li>
+            <li>
+              Developed a strategic pricing algorithm for in-house digital and
+              print marketing products, along with effectively developing a
+              comprehensive project lifecycle for marketing campaigns to enhance
+              project management proficiencies.
+            </li>
+          </ul>
+        </div>
+        <div class="education">
+          <h3 class="section-headers">Education & Professional Development</h3>
+          <hr />
+          <h5 class="certification">The Data Analysis and Visualization Boot
+          Camp</h5>
+          <p class="upperCase cert-institution">
+            The University of Texas at Austin: McCombs School of Business
+          </p>
+          <hr class="divider-light">
+          <h5 class="certification">NICET Level III Certification: Fire Alarm Systems</h5>
+        <p class="upperCase cert-institution">
+          National Institute for Certification in Engineering Technologies
+        </p>
+        <hr class="divider-light">
+        <h5 class="certification">Master Certificate in Project Management</h5>
+        <p class="upperCase cert-institution">
+          Villanova University
+        </p>
+        <hr class="divider-light">
+        <h5 class="certification">Bachelor of Business Administration</h5>
+        <p class="upperCase cert-institution">
+          University of Texas at Austin: Red McCombs School of Business
+        </p>
+        <hr class="divider-light">
+        <p class="standard-text">Effective Management Workshops | Various Leadership Seminars</p>
+        <p class="standard-text">Additional Professional / Personal Development Workshops & Seminars</p>
+      </div>
     </div>
   </body>
 </html>
