Added a sticky navbar to resume and implemented smooth scrolling.

--- a/My_Portfolio/resume.html
+++ b/My_Portfolio/resume.html
@@ -56,6 +56,15 @@
         </nav>
       </header>
       <div class="resume">
+        <div class="resume-navbar">
+          <ul class="resume-links">
+            <li><a href="#profile-qualifications" class="resume-link">Profile Qualifications</a></li>
+            <li><a href="#continued-education" class="resume-link">Continued Education</a></li>
+            <li><a href="#career-highlights" class="resume-link">Career Highlights</a></li>
+            <li><a href="#professional-synopsis" class="resume-link">Professional Synopsis</a></li>
+            <li><a href="#education" class="resume-link">Education & Professional Development</a></li>
+          </ul>
+        </div>
         <div class="tag-line upperCase" style="color: #e83656ff;">
           Dynamic Leader Seeking Career Change Into Software
           Development/Engineering
@@ -68,7 +77,7 @@
             >https://www.linkedin.com/in/stephenlyssy</a
           >
         </p>
-        <div class="profile-qualifications">
+        <div id="profile-qualifications">
           <h3 class="section-headers">Profile of Qualifications</h3>
           <hr />
           <p class="qualifications upperCase">
@@ -102,7 +111,7 @@
             </li>
           </ul>
         </div>
-        <div class="continued-education">
+        <div id="continued-education">
           <h3 class="section-headers">Continued Education</h3>
 
           <hr />
@@ -141,7 +150,7 @@
             </li>
           </ul>
         </div>
-        <div class="career-highlights">
+        <div id="career-highlights">
           <h3 class="section-headers">Career Highlights</h3>
           <hr />
           <ul>
@@ -171,7 +180,7 @@
             </li>
           </ul>
         </div>
-        <div class="proffessional-synopsis">
+        <div id="professional-synopsis">
           <h3 class="section-headers">Professional Synopsis</h3>
           <hr />
           <p class="upperCase company-name">Total Security Solutions</p>
@@ -260,7 +269,7 @@
             </li>
           </ul>
         </div>
-        <div class="education">
+        <div id="education">
           <h3 class="section-headers">Education & Professional Development</h3>
           <hr />
           <h5 class="certification">The Data Analysis and Visualization Boot
