Added footer to the bottom of the resume page.

--- a/My_Portfolio/resume.html
+++ b/My_Portfolio/resume.html
@@ -297,5 +297,70 @@
         <p class="standard-text">Additional Professional / Personal Development Workshops & Seminars</p>
       </div>
     </div>
+    <footer>
+      <div class="footer-column-top">
+        <div class="phone">
+          <p>Call:</p>
+          <p>T: (512) 492-2659</p>
+        </div>
+        <div class="email">
+          <p>E-Mail:</p>
+          <p>stephen.lyssy@gmail.com</p>
+        </div>
+      </div>
+      <div class="footer-column-middle">
+        <div class="follow">
+          <p>Follow Me:</p>
+          <ul class="icons">
+            <li class="icon">
+              <a
+                href="https://www.linkedin.com/in/stephenlyssy/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img
+                  src="./images/linkedin.png"
+                  alt="linkedin icon"
+                  class="icon-img"
+                />
+              </a>
+            </li>
+            <li class="icon">
+              <a
+                href="https://www.facebook.com/stephen.lyssy.9"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img
+                  src="./images/facebook.png"
+                  alt="facebook icon"
+                  class="icon-img"
+                />
+              </a>
+            </li>
+            <li class="icon">
+              <a
+                href="https://twitter.com/StephenLyssy"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img
+                  src="./images/twitter.png"
+                  alt="twitter icon"
+                  class="icon-img"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-column-bottom">
+        <div class="Postal">
+          <p>Postal:</p>
+          <p>1523 Founders Park</p>
+          <p>New Braunfels, TX 78132</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
