--- a/My_Portfolio/resume.html
+++ b/My_Portfolio/resume.html
@@ -72,7 +72,8 @@
         </div>
         <p class="contact-info">
           1523 Founders Park | New Braunfels, TX 78132 | (512) 492-2659 |
-          stephen.lyssy@gmail.com |
+          <a href="mailto:stephen.lyssy@gmail.com">stephen.lyssy@gmail.com</a>
+           |
           <a href="https://www.linkedin.com/in/stephenlyssy"
             >https://www.linkedin.com/in/stephenlyssy</a
           >
