Tried to fix the alignment issue in the footer. Still not 100%.

--- a/My_Portfolio/resume.html
+++ b/My_Portfolio/resume.html
@@ -312,7 +312,7 @@
       <div class="footer-column-middle">
         <div class="follow">
           <p>Follow Me:</p>
-          <ul class="icons">
+          <ul id="icons">
             <li class="icon">
               <a
                 href="https://www.linkedin.com/in/stephenlyssy/"
