--- a/My_Portfolio/projects.html
+++ b/My_Portfolio/projects.html
@@ -24,7 +24,7 @@
       href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,500;1,100;1,300&family=Alegreya+Sans:wght@100;300;400;500;700&family=Inter:wght@400;500;700&family=Kaushan+Script&family=Roboto+Slab:wght@500;600&family=Ubuntu&display=swap"
       rel="stylesheet"
     />
-    <script src="./script.js" defer></script>
+    <script src="./projects-script.js" defer></script>
   </head>
   <body>
     <div id="container">
@@ -54,11 +54,19 @@
           </div>
         </nav>
       </header>
-      <h1 class="projects-title">Check Out My Projects</h1>
-      <section>
+      <div class="projects-navbar">
+        <h1 class="projects-title">Check Out My Projects</h1>
+        <ul class="projects-navlinks">
+          <li><a href="#job-costing" class="project-link">Job Costing</a></li>
+          <li>
+            <a href="#flood-map" class="project-link">Horry County Flood Map</a>
+          </li>
+        </ul>
+      </div>
+      <section id="job-costing">
         <div class="project-description">
           <h2 class="project-name">
-            <a href="https://github.com/Slyssy/Job-Costing-2.0"
+            <a target="_blank" href="https://github.com/Slyssy/Job-Costing-2.0"
               >Job Costing Application</a
             >
           </h2>
@@ -97,7 +105,7 @@
           class="carrousel-image"
         />
       </section>
-      <section>
+      <section id="flood-map">
         <img
           src="./images//project-images/flood-map.png"
           alt=""
@@ -105,7 +113,9 @@
         />
         <div class="project-description">
           <h2 class="project-name">
-            <a href="https://horry-county-flood-map.herokuapp.com/"
+            <a
+              target="_blank"
+              href="https://horry-county-flood-map.herokuapp.com/"
               >Horry County Flood Map</a
             >
           </h2>
