Updated css for mobile views.

--- a/My_Portfolio/projects.html
+++ b/My_Portfolio/projects.html
@@ -134,7 +134,8 @@
             plotted those to a map that showed current FEMA flood zones. This
             showed that there were many flood events in areas that according to
             FEMA were not in flood zones. This is a strong indicator that the
-            FEMA flood zone maps need to be updated for this area. <br /><br />
+            FEMA flood zone maps need to be updated for this area.
+            <br /><br />
             We also prepared many data visualizations that showed everything
             from the amount of precipitation by weather station for a given
             number of years to showing how land usage had changed between 1996
