Added a thumbnail viewer to each of the 2 projects I currently have entered on the projects page.

--- a/My_Portfolio/projects.html
+++ b/My_Portfolio/projects.html
@@ -86,6 +86,43 @@
             exceeding budgeted expenses is often the first step to preventing a
             project from becoming a major loss.
           </p>
+          <ul class="thumbnails">
+            <li onclick="selectImageJobCosting(0)">
+              <img
+                src="./images/project-images/carousel0.png"
+                alt="Dashboard Image"
+                class="thumb-image"
+              />
+            </li>
+            <li onclick="selectImageJobCosting(1)">
+              <img
+                src="./images/project-images/carousel1.png"
+                alt="Map Image"
+                class="thumb-image"
+              />
+            </li>
+            <li onclick="selectImageJobCosting(2)">
+              <img
+                src="./images/project-images/carousel2.png"
+                alt="Image of Performance Graph"
+                class="thumb-image"
+              />
+            </li>
+            <li onclick="selectImageJobCosting(3)">
+              <img
+                src="./images/project-images/carousel3.png"
+                alt="Image of Estimate to Actual Graphs"
+                class="thumb-image"
+              />
+            </li>
+            <li onclick="selectImageJobCosting(4)">
+              <img
+                src="./images/project-images/carousel4.png"
+                alt="Image of Project Details Graph"
+                class="thumb-image"
+              />
+            </li>
+          </ul>
           <ul class="technologies">
             <li>Python</li>
             <li>Flask</li>
@@ -100,16 +137,18 @@
           </ul>
         </div>
         <img
-          src="./images/project-images/dashboard_table.png"
+          src="./images/project-images/carousel0.png"
           alt="Dashboard Image"
-          class="carrousel-image"
+          class="carousel-image"
+          id="job-costing-image"
         />
       </section>
       <section id="flood-map">
         <img
-          src="./images//project-images/flood-map.png"
+          src="./images/project-images/carousel5.png"
           alt=""
-          class="carrousel-image"
+          class="carousel-image"
+          id="flood-image"
         />
         <div class="project-description">
           <h2 class="project-name">
@@ -141,6 +180,43 @@
             number of years to showing how land usage had changed between 1996
             and 2016.
           </p>
+          <ul class="thumbnails">
+            <li onclick="selectImageFlood(5)">
+              <img
+                src="./images/project-images/carousel5.png"
+                alt="Dashboard Image"
+                class="thumb-image"
+              />
+            </li>
+            <li onclick="selectImageFlood(6)">
+              <img
+                src="./images/project-images/carousel6.png"
+                alt="Map Image"
+                class="thumb-image"
+              />
+            </li>
+            <li onclick="selectImageFlood(7)">
+              <img
+                src="./images/project-images/carousel7.png"
+                alt="Image of Performance Graph"
+                class="thumb-image"
+              />
+            </li>
+            <li onclick="selectImageFlood(8)">
+              <img
+                src="./images/project-images/carousel8.png"
+                alt="Image of Estimate to Actual Graphs"
+                class="thumb-image"
+              />
+            </li>
+            <li onclick="selectImageFlood(9)">
+              <img
+                src="./images/project-images/carousel9.png"
+                alt="Image of Project Details Graph"
+                class="thumb-image"
+              />
+            </li>
+          </ul>
           <ul class="technologies">
             <li>JavaScript</li>
             <li>D3.js</li>
