Reverted back to original. I accidently made unintended changes to main.

--- a/My_Portfolio/projects.html
+++ b/My_Portfolio/projects.html
@@ -55,13 +55,13 @@
         </nav>
       </header>
       <div class="projects-navbar">
-        <!-- <h1 class="projects-title">Check Out My Projects</h1>
+        <h1 class="projects-title">Check Out My Projects</h1>
         <ul class="projects-navlinks">
           <li><a href="#job-costing" class="project-link">Job Costing</a></li>
           <li>
             <a href="#flood-map" class="project-link">Horry County Flood Map</a>
           </li>
-        </ul> -->
+        </ul>
       </div>
       <div class="slider">
         <section id="job-costing" class="slide slide--1">
@@ -230,9 +230,6 @@
             </ul>
           </div>
         </section>
-        <button class="slider__btn slider__btn--left">&larr;</button>
-        <button class="slider__btn slider__btn--right">&rarr;</button>
-        <div class="dots"></div>
       </div>
     </div>
   </body>
