Added a close icon to the resume sticky navbar.

--- a/My_Portfolio/resume.html
+++ b/My_Portfolio/resume.html
@@ -58,13 +58,18 @@
       <div class="resume">
         <div class="resume-navbar">
           <ul class="resume-links">
+            <li> <svg xmlns="http://www.w3.org/2000/svg" class="close-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+            </svg></li>
             <li><a href="#profile-qualifications" class="resume-link">Profile Qualifications</a></li>
             <li><a href="#continued-education" class="resume-link">Continued Education</a></li>
             <li><a href="#career-highlights" class="resume-link">Career Highlights</a></li>
             <li><a href="#professional-synopsis" class="resume-link">Professional Synopsis</a></li>
             <li><a href="#education" class="resume-link">Education & Professional Development</a></li>
           </ul>
+         
         </div>
+        
         <div class="tag-line upperCase" style="color: #e83656ff;">
           Dynamic Leader Seeking Career Change Into Software
           Development/Engineering
