Added the initial contact me page elements.

--- a/My_Portfolio/contact.html
+++ b/My_Portfolio/contact.html
@@ -42,11 +42,17 @@
           </div>
         </nav>
       </header>
-      <img
-        src="./images/underConstruction.png"
-        alt="Under Construction Image"
-        class="underConstruction"
-      />
+      <form action="#">
+        <input type="text" placeholder="Enter your Name" />
+        <input type="text" placeholder="Enter your Email" />
+        <textarea
+          name="contact-message"
+          id="contact-message"
+          cols="40"
+          rows="20"
+        ></textarea>
+        <input type="submit" name="contact-submit" id="contact-submit" />
+      </form>
     </div>
   </body>
 </html>
