Updated CSS for form on contact me page.

--- a/My_Portfolio/contact.html
+++ b/My_Portfolio/contact.html
@@ -15,7 +15,7 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <div id="container">
+    <div class="container">
       <header>
         <nav class="navbar">
           <div class="logo">
@@ -48,8 +48,7 @@
         <textarea
           name="contact-message"
           id="contact-message"
-          cols="40"
-          rows="20"
+          placeholder="Enter Message"
         ></textarea>
         <input type="submit" name="contact-submit" id="contact-submit" />
       </form>
