--- a/My_Portfolio/thanks.html
+++ b/My_Portfolio/thanks.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Stephen</title>
+    <title>Thank You!</title>
+  </head>
+  <body>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -42,37 +44,6 @@
           </div>
         </nav>
       </header>
-      <form
-        action="https://formsubmit.co/stephen.lyssy@gmail.com"
-        method="POST"
-      >
-        <input
-          type="text"
-          name="full-name"
-          placeholder="Enter your Full Name"
-          required
-        />
-        <input
-          type="email"
-          name="email"
-          placeholder="Enter your Email"
-          id="email"
-          required
-        />
-        <input
-          type="hidden"
-          name="_next"
-          value="https://slyssy.github.io/ACA_web101_Stephen_Lyssy/My_Portfolio/thanks.html"
-        />
-        <input type="hidden" name="_subject" value="New submission!" />
-        <textarea
-          name="contact-message"
-          id="contact-message"
-          placeholder="Enter Message"
-          required
-        ></textarea>
-        <input type="submit" name="contact-submit" id="contact-submit" />
-      </form>
-    </div>
+      <h1>Thank You for your Email!!</h1>
   </body>
 </html>
