Updated Thank you page styling.

--- a/My_Portfolio/thanks.html
+++ b/My_Portfolio/thanks.html
@@ -44,6 +44,6 @@
           </div>
         </nav>
       </header>
-      <h1>Thank You for your Email!!</h1>
+      <h1 class="thanks">Thank You for your Email!!</h1>
   </body>
 </html>
