Fixed a small typo in my about me paragraph.

--- a/My_Portfolio/thanks.html
+++ b/My_Portfolio/thanks.html
@@ -33,7 +33,7 @@
             <ul>
               <li>
                 <a
-                  href="https://slyssy.github.io/ACA_web101_Stephen_Lyssy/My_Portfolio/index.html"
+                  href="https://stephenlyssy.com"
                   >Home</a
                 >
               </li>
