--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -31,10 +31,7 @@
           <div class="navbar-links">
             <ul>
               <li>
-                <a
-                  href="https://slyssy.github.io/ACA_web101_Stephen_Lyssy/My_Portfolio/index.html"
-                  >Home</a
-                >
+                <a href="https://stephenlyssy.com">Home</a>
               </li>
               <li><a href="./resume.html">Resume</a></li>
               <li><a href="./projects.html">Projects</a></li>
@@ -67,7 +64,7 @@
               my free time, I can either be found out on a hike with my two
               dogs, Percy and Winston, or you can find me sitting in front of my
               computer tinkering with code. <br /><br />It's my dream to one day
-              turn my coding hobby into successful career. They say,
+              turn my coding hobby into a successful career. They say,
               <em
                 >"Do what you love, and you'll never work a day in your life." </em
               >I love working on code. I love how it forces you to think through
