--- a/My_Portfolio/projects.html
+++ b/My_Portfolio/projects.html
@@ -43,7 +43,7 @@
             <ul>
               <li>
                 <a
-                  href="https://slyssy.github.io/ACA_web101_Stephen_Lyssy/My_Portfolio/index.html"
+                  href="https://stephenlyssy.com"
                   >Home</a
                 >
               </li>
