--- a/My_Portfolio/skills.html
+++ b/My_Portfolio/skills.html
@@ -30,10 +30,7 @@
           <div class="navbar-links">
             <ul>
               <li>
-                <a
-                  href="https://slyssy.github.io/ACA_web101_Stephen_Lyssy/My_Portfolio/index.html"
-                  >Home</a
-                >
+                <a href="https://stephenlyssy.com">Home</a>
               </li>
               <li><a href="./resume.html">Resume</a></li>
               <li><a href="./projects.html">Projects</a></li>
